RESOLVED FIXED54518
Fix race condition in JavaScriptAudioNode
https://bugs.webkit.org/show_bug.cgi?id=54518
Summary Fix race condition in JavaScriptAudioNode
Chris Rogers
Reported 2011-02-15 17:54:20 PST
Fix race condition in JavaScriptAudioNode
Attachments
Patch (1.33 KB, patch)
2011-02-15 17:56 PST, Chris Rogers
kbr: review+
Chris Rogers
Comment 1 2011-02-15 17:56:06 PST
Chris Rogers
Comment 2 2011-02-15 17:58:36 PST
m_isRequestOutstanding needs to be set before callOnMainThread() to avoid race condition with its value being set in the main thread. This fixes chromium bug: http://code.google.com/p/chromium/issues/detail?id=71702 The race condition could also happen for other ports.
Kenneth Russell
Comment 3 2011-02-15 18:01:12 PST
Comment on attachment 82564 [details] Patch Looks fine to me. Tricky.
Chris Rogers
Comment 4 2011-02-15 18:13:23 PST
Note You need to log in before you can comment on or make changes to this bug.