2011-02-15  Chris Rogers  <crogers@google.com>

Reviewed by Kenneth Russell.

        Fix race condition in JavaScriptAudioNode
        https://bugs.webkit.org/show_bug.cgi?id=54518

        No new tests since audio API is not yet implemented.

        * webaudio/JavaScriptAudioNode.cpp:
        (WebCore::JavaScriptAudioNode::process):


Canonical link: https://commits.webkit.org/68653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78671 268f45cc-cd09-0410-ab3c-d52691b4dbfc